--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.getui.push</groupId>
     <artifactId>restful-sdk</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0.17</version>
+    <version>1.0.1.0</version>
     <url>https://github.com/GetuiLaboratory/getui-pushapi-java-client-v2</url>
     <name>Getui Push API Java Client</name>
     <description>Getui's officially supported Java client library for accessing Getui APIs.</description>
@@ -80,7 +80,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -91,8 +91,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
